tests/baselines/reference/for-of39.errors.txt
for-of39.ts(1,15): error TS2769: No overload matches this call.
  Overload 1 of 4, '(iterable?: Iterable<readonly [string, boolean]>): Map<string, boolean>', gave the following error.
    Argument of type '([string, number] | [string, true])[]' is not assignable to parameter of type 'Iterable<readonly [string, boolean]>'.
      The types returned by '[Symbol.iterator]().next(...)' are incompatible between these types.
        Type 'IteratorResult<[string, number] | [string, true], any>' is not assignable to type 'IteratorResult<readonly [string, boolean], any>'.
          Type 'IteratorYieldResult<[string, number] | [string, true]>' is not assignable to type 'IteratorResult<readonly [string, boolean], any>'.
            Type 'IteratorYieldResult<[string, number] | [string, true]>' is not assignable to type 'IteratorYieldResult<readonly [string, boolean]>'.
              Type '[string, number] | [string, true]' is not assignable to type 'readonly [string, boolean]'.
                Type '[string, number]' is not assignable to type 'readonly [string, boolean]'.
                  Type at position 1 in source is not compatible with type at position 1 in target.
                    Type 'number' is not assignable to type 'boolean'.
  Overload 2 of 4, '(entries?: readonly (readonly [string, boolean])[]): Map<string, boolean>', gave the following error.
    Type 'number' is not assignable to type 'boolean'.


==== for-of39.ts (1 errors) ====
    var map = new Map([["", true], ["", 0]]);
                  ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 4, '(iterable?: Iterable<readonly [string, boolean]>): Map<string, boolean>', gave the following error.
!!! error TS2769:     Argument of type '([string, number] | [string, true])[]' is not assignable to parameter of type 'Iterable<readonly [string, boolean]>'.
!!! error TS2769:       The types returned by '[Symbol.iterator]().next(...)' are incompatible between these types.
!!! error TS2769:         Type 'IteratorResult<[string, number] | [string, true], any>' is not assignable to type 'IteratorResult<readonly [string, boolean], any>'.
!!! error TS2769:           Type 'IteratorYieldResult<[string, number] | [string, true]>' is not assignable to type 'IteratorResult<readonly [string, boolean], any>'.
!!! error TS2769:             Type 'IteratorYieldResult<[string, number] | [string, true]>' is not assignable to type 'IteratorYieldResult<readonly [string, boolean]>'.
!!! error TS2769:               Type '[string, number] | [string, true]' is not assignable to type 'readonly [string, boolean]'.
!!! error TS2769:                 Type '[string, number]' is not assignable to type 'readonly [string, boolean]'.
!!! error TS2769:                   Type at position 1 in source is not compatible with type at position 1 in target.
!!! error TS2769:                     Type 'number' is not assignable to type 'boolean'.
!!! error TS2769:   Overload 2 of 4, '(entries?: readonly (readonly [string, boolean])[]): Map<string, boolean>', gave the following error.
!!! error TS2769:     Type 'number' is not assignable to type 'boolean'.
    for (var [k, v] of map) {
        k;
        v;
    }